[project]
name = "ph-scraper"
version = "0.1.0"
description = "Scraper for PornHub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.5",
]

[project.scripts]
ph-scraper = "ph_scraper.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
